# Wildberries_autoreplies_v2

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_09_15_1914-48216cbe2e3b_create_review_table.py  2025_09_15_1916-31c2101d970a_create_response_table.py
app/clients/: __init__.py  gemini_client.py  interfaces.py  wb_client.py
app/core/: config.py  logger.py
app/core/models/: __init__.py  base.py  db_helper.py  response.py  review.py
app/services/: __init__.py  fetcher.py  pipeline.py  publisher.py  replier.py
app/utils/: case_converter.py
tests/: conftest.py  test_fetcher.py  test_pipeline.py  test_publisher.py  test_replier.py
